--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ run {
         '-XX:+UseG1GC',
         '-XX:MaxGCPauseMillis=200',
         '-XX:+UnlockExperimentalVMOptions',
+        '-Xms4g',
         '-Xmx4g',
         '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
         '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
